welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:2: error: method faireV overrides nothing
override def faireV() { 
             ^